--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
 		</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 		<script src="script.js" type="text/javascript"></script>
-		<script src="comprobarRespuestas.js"></script>
-		<script type="text/javascript">
-
+		<script>
+		// $(document).ready(function() {
+		// 	$("#botonSiguiente").click(function(){
+		// 		mostrarSiguientes();
+		// 	});
+		// });
 		// $(document).ready(function() {
 		// 	$('input[type=radio]').live('change', function() { alert($(this).val()); });
 		// });
@@ -78,6 +81,8 @@
 			<h1>Test de coche (Permiso B)</h1>
 			<form id="formExamen"> <!-- http://api.jquery.com/submit/ -->
 				<input type="submit" id="botonEnviar" value="Enviar">
+				<div id="preguntasMostradas"></div>
+				<input type="button" id="botonSiguiente" value="Siguiente" onclick="mostrarSiguientes();">
 			</form>
 		</div>
 		<footer style="clear: both;text-align: center;">
