Corregida función click() en botón SIguiente
Usar “onclick” dentro del elemento HTML, aunque funciona, no es
correcto. Es conveniente gestionar todos los eventos de interacción con
el usuario desde jQuery.

Para ello, la función
$('#botonSiguiente').click(mostrarSiguientes);
debe ir dentro del cuerpo del $(document.).ready();
En caso contrario, que esté fuera, no funcionará.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<form id="formExamen"> <!-- http://api.jquery.com/submit/ -->
 				<input type="submit" id="botonEnviar" value="Enviar">
 				<div id="preguntasMostradas"></div>
-				<input type="button" id="botonSiguiente" value="Siguiente" onclick="mostrarSiguientes();">
+				<input type="button" id="botonSiguiente" value="Siguiente" >
 			</form>
 		</div>
 		<footer style="clear: both;text-align: center;">
