--- a/index.html
+++ b/index.html
@@ -3,73 +3,78 @@
 <head>
 	<meta charset="utf-8">
 
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
+<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
+	Remove this if you use the .htaccess -->
 
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>index</title>
+	<meta name="author" content="Jorge Cortés">
+	<style type="text/css">
+	* {
+		font-family:sans-serif;
+		/*font-size:inherit;*/
+	}
+	h1 {
+		padding-left: 0.5em;
+	}
+	#menu {
+		width: 20%;
+		height: 100%;
+		float: left;
+		padding: 0.2em;
+		margin: 0.2em;
+	}
+	#contenido {
+		padding: 0.2em;
+		margin: 0.2em;
+		float: left;
+		width: 80%;
+		font-size: small;
+	}
+	.preguntas {
+		border: 1px solid black;
+		padding: 0.2em;
+		margin: 0.2em;
+	}
+	.respuesta, .pregunta{
+		width: 60%;
+		margin-left: 10px;
+		inline:block;
 
-		<title>index</title>
+	}
+	.pregunta{
+		font-size: 110%;
+	}
+	.numPregunta{
+		font-weight: bolder;
+		font-size: 150%;
+		border-style: 5px solid;
+		color:darkred;
+	}
+	img{
+		min-height: 100px;
+		min-width: 100px;
+		vertical-align: middle;
+		margin-right: 1em
+		height:150%;
+		margin: 1em;
+		border:2px solid black;
 
-		<meta name="author" content="Jorge Cortés">
+	}
+	input{
+		margin: 10px;
+	}
+	#botonSiguiente{
+		float: right;
+	}
 
-		<style type="text/css">
-		* {
-			font-family: calibri;
-			/*font-size:inherit;*/
-		}
-		h1 {
-			padding-left: 0.5em;
-		}
-
-		#menu {
-			width: 20%;
-			height: 100%;
-			float: left;
-			padding: 0.2em;
-			margin: 0.2em;
-		}
-		#contenido {
-			padding: 0.2em;
-			margin: 0.2em;
-			float: left;
-			width: 80%;
-			font-size: small;
-		}
-		.preguntas {
-			border: 1px solid black;
-			padding: 0.2em;
-			margin: 0.2em;
-		}
-		.respuesta, .pregunta{
-			width: 70%;
-			margin-left: 10px;
-			inline:block;
-
-		}
-		img{
-			min-height: 100px;
-			min-width: 100px;
-			vertical-align: middle;
-			margin-right: 1em
-			height:150%;
-			margin: 1em;
-			border:2px solid black;
-
-		}
-		input{margin: 10px;}
-
-		</style>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-		<script src="script.js" type="text/javascript"></script>
-		<script>
-		// $(document).ready(function() {
-		// 	$("#botonSiguiente").click(function(){
-		// 		mostrarSiguientes();
-		// 	});
-		// });
-		// $(document).ready(function() {
-		// 	$('input[type=radio]').live('change', function() { alert($(this).val()); });
-		// });
+	</style>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+	<script src="script.js" type="text/javascript"></script>
+	<script>
+// $(document).ready(function() {
+// 	$('input[type=radio]').live('change', function() { alert($(this).val()); });
+// });
 </script>
 </head>
 <body>
