--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
 	* {
 		font-family:sans-serif;
 		/*font-size:inherit;*/
+
 	}
+
 	h1 {
 		padding-left: 0.5em;
+		text-shadow:2px 2px gray;
+	}
+	ol{
+		margin: 0px;
+	}
+	#contenedor{
+		height: 20em;
 	}
 	#menu {
 		width: 20%;
@@ -28,7 +37,7 @@
 		padding: 0.2em;
 		margin: 0.2em;
 		float: left;
-		width: 80%;
+		width: 90%;
 		font-size: small;
 	}
 	.preguntas {
@@ -37,9 +46,10 @@
 		margin: 0.2em;
 	}
 	.respuesta, .pregunta{
-		width: 60%;
+		width: 80%;
 		margin-left: 10px;
 		inline:block;
+		height: 30%;
 
 	}
 	.pregunta{
@@ -65,7 +75,11 @@
 		margin: 10px;
 	}
 	#botonSiguiente{
-		float: right;
+		/*float: right;*/
+		/*clear: both;
+		float: none;*/
+		top:0%;
+		font-size: 200%;
 	}
 
 	</style>
@@ -78,19 +92,23 @@
 </script>
 </head>
 <body>
-	<div>
+	<div id="contenedor">
+
 		<div id="superior">
 			<!-- <h1>Preguntas Dinámicas</h1> -->
 		</div>
+		
 		<div id="contenido" >
+			
 			<h1>Test de coche (Permiso B)</h1>
 			<form id="formExamen"> <!-- http://api.jquery.com/submit/ -->
-				<input type="submit" id="botonEnviar" value="Enviar">
+				<!-- <input type="submit" id="botonEnviar" value="Enviar"> -->
 				<div id="preguntasMostradas"></div>
-				<input type="button" id="botonSiguiente" value="Siguiente" >
+				<input type="button" id="botonSiguiente" value="Siguiente" >		
 			</form>
 		</div>
-		<footer style="clear: both;text-align: center;">
+		
+		<footer style="clear: both;text-align: center; font-size:small;">
 			<p>
 				&copy; Copyright  by Jorge Cortés
 			</p>
