--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<style type="text/css">
 	* {
 		font-family:sans-serif;
-		/*font-size:inherit;*/
 
 	}
 
@@ -75,9 +74,6 @@
 		margin: 10px;
 	}
 	#botonSiguiente{
-		/*float: right;*/
-		/*clear: both;
-		float: none;*/
 		top:0%;
 		font-size: 200%;
 	}
@@ -86,16 +82,16 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 	<script src="script.js" type="text/javascript"></script>
 	<script>
-// $(document).ready(function() {
-// 	$('input[type=radio]').live('change', function() { alert($(this).val()); });
-// });
+		//Código de prueba: muestra alerta cuando se pulsa un radio, y muestra su valor.
+		// $(document).ready(function() {
+		// 	$('input[type=radio]').live('change', function() { alert($(this).val()); });
+		// });
 </script>
 </head>
 <body>
 	<div id="contenedor">
 
 		<div id="superior">
-			<!-- <h1>Preguntas Dinámicas</h1> -->
 		</div>
 		
 		<div id="contenido" >
