--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	input{
 		margin: 10px;
 	}
-	#botonSiguiente{
+	#botonAnterior, #botonSiguiente{
 		top:0%;
 		font-size: 200%;
 	}
@@ -100,8 +100,9 @@
 			<form id="formExamen"> <!-- http://api.jquery.com/submit/ -->
 				<!-- <input type="submit" id="botonEnviar" value="Enviar"> -->
 				<div id="preguntasMostradas"></div>
-				<input type="button" id="botonSiguiente" value="Siguiente" >		
-			</form>
+				<input type="button" id="botonAnterior" value="Anterior">
+				<input type="button" id="botonSiguiente" value="Siguiente">						
+			<form>
 		</div>
 		
 		<footer style="clear: both;text-align: center; font-size:small;">
