--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		
 		<footer style="clear: both;text-align: center; font-size:small;">
 			<p>
-				&copy; Copyright  by Jorge Cortés
+				&copy; Copyright  by David Cabot & Jorge Cortés
 			</p>
 		</footer>
 	</div>
