--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>index</title>
 	<meta name="author" content="Jorge Cortés">
+	<meta name="author" content="David Cabot">
 	<style type="text/css">
 	* {
 		font-family:sans-serif;
@@ -51,6 +52,13 @@
 		height: 30%;
 
 	}
+	.acierto {
+		background-color: green;
+	}
+
+	.error {
+		background-color: red;
+	}
 	.pregunta{
 		font-size: 110%;
 	}
@@ -73,7 +81,7 @@
 	input{
 		margin: 10px;
 	}
-	#botonAnterior, #botonSiguiente{
+	#botonAnterior, #botonSiguiente, #botonCorregir {
 		top:0%;
 		font-size: 200%;
 	}
@@ -81,12 +89,6 @@
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 	<script src="script.js" type="text/javascript"></script>
-	<script>
-		//Código de prueba: muestra alerta cuando se pulsa un radio, y muestra su valor.
-		// $(document).ready(function() {
-		// 	$('input[type=radio]').live('change', function() { alert($(this).val()); });
-		// });
-</script>
 </head>
 <body>
 	<div id="contenedor">
@@ -101,7 +103,8 @@
 				<!-- <input type="submit" id="botonEnviar" value="Enviar"> -->
 				<div id="preguntasMostradas"></div>
 				<input type="button" id="botonAnterior" value="Anterior">
-				<input type="button" id="botonSiguiente" value="Siguiente">						
+				<input type="button" id="botonSiguiente" value="Siguiente">
+				<input type="button" id="botonCorregir" value="Corregir">						
 			<form>
 		</div>
 		
