Corregido comportamiento botonCorregir
Ahora sólo se podrá corregir si no quedan respuestas sin marcar.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div id="preguntasMostradas"></div>
 				<input type="button" id="botonAnterior" value="Anterior">
 				<input type="button" id="botonSiguiente" value="Siguiente">
-				<input type="button" id="botonCorregir" value="Corregir">						
+				<input type="button" id="botonCorregir" value="Corregir Test">						
 			<form>
 		</div>
 		
