--- a/index.html
+++ b/index.html
@@ -14,18 +14,30 @@
 	
 	* {
 		font-family:sans-serif;
+		
 
 	}
+	
 
 	h1 {
 		padding-left: 0.5em;
-		text-shadow:2px 2px gray;
+		text-shadow:2px 2px white;
+		background-color: white;
+		
+	}
+	#superior{
+		background-color: white;
+		margin-top: 1em;
+		width: 300px;
 	}
 	ol{
 		margin: 0px;
 	}
 	#contenedor{
-		height: 20em;
+		/*height: 20em;*/
+		background-image: url('src/car_dingbats_on_white_background_seamless.jpg');
+		background-repeat:repeat;
+		
 	}
 	#menu {
 		width: 20%;
@@ -43,8 +55,9 @@
 	}
 	.preguntas {
 		border: 1px solid black;
-		padding: 0.2em;
+		padding: 2em;
 		margin: 0.2em;
+		background-color: white;
 	}
 	.respuesta, .pregunta{
 		width: 80%;
@@ -87,19 +100,24 @@
 		font-size: 200%;
 	}
 
+	footer{
+		background-color: white;
+	}
+
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 	<script src="script.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="contenedor">
-
+<h1>Test de coche (Permiso B)</h1>
 		<div id="superior">
+			
 		</div>
 		
 		<div id="contenido" >
 			
-			<h1>Test de coche (Permiso B)</h1>
+			
 			<form id="formExamen"> <!-- http://api.jquery.com/submit/ -->
 				<!-- <input type="submit" id="botonEnviar" value="Enviar"> -->
 				<div id="preguntasMostradas"></div>
