Botones Siguiente y Corregir a la derecha

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
 		top:0%;
 		font-size: 200%;
 	}
+	#botonSiguiente, #botonCorregir {
+		float: right;
+	}
 
 	footer{
 		background-color: white;
