--- a/index.html
+++ b/index.html
@@ -20,24 +20,21 @@
 	
 
 	h1 {
+		float: left;
 		padding-left: 0.5em;
-		text-shadow:2px 2px white;
-		background-color: white;
-		
+		text-shadow:2px 2px white;		
 	}
 	#superior{
-		background-color: white;
-		margin-top: 1em;
-		width: 300px;
+		margin-top: 0.5em;
+		width: 90%;
 	}
 	ol{
 		margin: 0px;
 	}
 	#contenedor{
 		/*height: 20em;*/
-		background-image: url('src/car_dingbats_on_white_background_seamless.jpg');
-		background-repeat:repeat;
-		
+		background-image: url('src/fondo.jpg');
+		background-repeat:repeat;		
 	}
 	#menu {
 		width: 20%;
@@ -53,11 +50,34 @@
 		width: 90%;
 		font-size: small;
 	}
+	#realizados, #aprobados {
+		float: right;
+		widht: 200px;
+		padding: 2px;
+		font-weight: bold;
+		border: 1px solid;
+		color: black;
+		background-color: #66c4c0;
+		text-align: center;
+		margin-top: 0.5em;
+		margin-right: 0.5em;
+	}
+	#realizadosTotal, #aprobadosTotal {
+		color: black;
+  		width: 200px;
+  		margin-left: auto;
+  		margin-right: auto;
+  		text-align: center;
+	}
+	#preguntasMostradas{
+		margin: 0 auto;
+	}
 	.preguntas {
 		border: 1px solid black;
 		padding: 2em;
 		margin: 0.2em;
-		background-color: white;
+		background-image: url('src/fondoPregunta.jpg');
+		background-repeat:repeat;
 	}
 	.respuesta, .pregunta{
 		width: 80%;
@@ -67,11 +87,11 @@
 
 	}
 	.acierto {
-		background-color: green;
+		background-color: #4cb77c;
 	}
 
 	.error {
-		background-color: red;
+		background-color: #bd5740;
 	}
 	.pregunta{
 		font-size: 110%;
@@ -89,7 +109,7 @@
 		margin-right: 1em
 		height:150%;
 		margin: 1em;
-		border:2px solid black;
+		border: 1px solid black;
 
 	}
 	input{
@@ -104,7 +124,6 @@
 	}
 
 	footer{
-		background-color: white;
 	}
 
 	</style>
@@ -112,15 +131,16 @@
 	<script src="script.js" type="text/javascript"></script>
 </head>
 <body>
-	<div id="contenedor">
-<h1>Test de coche (Permiso B)</h1>
+	<div id="contenedor">		
+
 		<div id="superior">
-			
-		</div>
-		
+			<div id="encabezado"><h1>Test de coche (Permiso B)</h1></div>
+			<div id="realizados">TESTS REALIZADOS<div id="realizadosTotal">0</div></div>
+			<div id="aprobados">TESTS APROBADOS<div id="aprobadosTotal">0</div></div>
+		</div>	
+
 		<div id="contenido" >
-			
-			
+
 			<form id="formExamen"> <!-- http://api.jquery.com/submit/ -->
 				<!-- <input type="submit" id="botonEnviar" value="Enviar"> -->
 				<div id="preguntasMostradas"></div>
