Ahora se muestran correctamente las correcciones

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 		margin-left: 10px;
 		inline:block;
 		height: 30%;
-
+	}
+	.respuesta {
+		line-height: 2.4em;
 	}
 	.acierto {
 		background-color: #4cb77c;
@@ -146,7 +148,8 @@
 				<div id="preguntasMostradas"></div>
 				<input type="button" id="botonAnterior" value="Anterior">
 				<input type="button" id="botonSiguiente" value="Siguiente">
-				<input type="button" id="botonCorregir" value="Corregir Test">						
+				<input type="button" id="botonCorregir" value="Corregir Test">
+				<input type="button" id="botonNuevoTest" value="Nuevo Test">					
 			<form>
 		</div>
 		
