Corregido botones, nuevo botón NuevoTest

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 	input{
 		margin: 10px;
 	}
-	#botonAnterior, #botonSiguiente, #botonCorregir {
+	#botonAnterior, #botonSiguiente, #botonCorregir, #botonNuevoTest {
 		top:0%;
 		font-size: 200%;
 	}
-	#botonSiguiente, #botonCorregir {
+	#botonSiguiente, #botonCorregir, #botonNuevoTest {
 		float: right;
 	}
 
