Botón NuevoTest funcionando

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
 	
 	* {
 		font-family:sans-serif;
-		
-
-	}
-	
-
+	}	
 	h1 {
 		float: left;
 		padding-left: 0.5em;
@@ -126,6 +122,7 @@
 	}
 
 	footer{
+		padding: 0.5em;
 	}
 
 	</style>
