--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 		text-shadow:2px 2px white;		
 	}
 	#superior{
-		margin-top: 0.5em;
+		margin: 0 auto;
 		width: 90%;
 	}
 	ol{
 		margin: 0px;
 	}
 	#contenedor{
-		/*height: 20em;*/
 		background-image: url('src/fondo.jpg');
-		background-repeat:repeat;		
+		background-repeat: repeat;
+		width: 100%;	
 	}
 	#menu {
 		width: 20%;
@@ -41,10 +41,10 @@
 	}
 	#contenido {
 		padding: 0.2em;
-		margin: 0.2em;
-		float: left;
+		margin: 0 auto;
 		width: 90%;
 		font-size: small;
+		padding-top: 6em;
 	}
 	#realizados, #aprobados {
 		float: right;
@@ -70,10 +70,10 @@
 	}
 	.preguntas {
 		border: 1px solid black;
-		padding: 2em;
-		margin: 0.2em;
+		margin-bottom: 0.2em;
+		padding: 0.1em;
 		background-image: url('src/fondoPregunta.jpg');
-		background-repeat:repeat;
+		background-repeat: repeat;
 	}
 	.respuesta, .pregunta{
 		width: 80%;
@@ -86,6 +86,11 @@
 	}
 	.acierto {
 		background-color: #4cb77c;
+	}
+	.estadistica {
+		font-weight: bold;
+		font-size: 120%;
+		color: white;
 	}
 
 	.error {
@@ -108,7 +113,6 @@
 		height:150%;
 		margin: 1em;
 		border: 1px solid black;
-
 	}
 	input{
 		margin: 10px;
@@ -123,6 +127,8 @@
 
 	footer{
 		padding: 0.5em;
+		margin: 0 auto;
+		width: 90%;
 	}
 
 	</style>
@@ -134,8 +140,8 @@
 
 		<div id="superior">
 			<div id="encabezado"><h1>Test de coche (Permiso B)</h1></div>
-			<div id="realizados">TESTS REALIZADOS<div id="realizadosTotal">0</div></div>
-			<div id="aprobados">TESTS APROBADOS<div id="aprobadosTotal">0</div></div>
+			<div id="realizados">TESTS APROBADOS<div id="aprobadosTotal">0</div></div>
+			<div id="aprobados">TESTS COMPLETADOS<div id="realizadosTotal">0</div></div>
 		</div>	
 
 		<div id="contenido" >
