--- a/index.html
+++ b/index.html
@@ -10,132 +10,7 @@
 	<title>index</title>
 	<meta name="author" content="Jorge Cortés">
 	<meta name="author" content="David Cabot">
-	<style type="text/css">
-	
-	* {
-		font-family:sans-serif;
-	}	
-	h1 {
-		float: left;
-		padding-left: 0.5em;
-		text-shadow:2px 2px white;		
-	}
-	#superior{
-		margin: 0 auto;
-		width: 90%;
-	}
-	ol{
-		margin: 0px;
-
-	}
-	#contenedor{
-		background-image: url('src/fondo.jpg');
-		background-repeat: repeat;
-		width: 100%;	
-	}
-	#menu {
-		width: 20%;
-		height: 100%;
-		float: left;
-		padding: 0.2em;
-		margin: 0.2em;
-	}
-	#contenido {
-		padding: 0.2em;
-		margin: 0 auto;
-		width: 90%;
-		font-size: small;
-		padding-top: 6em;
-	}
-	#realizados, #aprobados {
-		float: right;
-		widht: 200px;
-		padding: 2px;
-		font-weight: bold;
-		border: 1px solid;
-		color: black;
-		background-color: #66c4c0;
-		text-align: center;
-		margin-top: 0.5em;
-		margin-right: 0.5em;
-	}
-	#realizadosTotal, #aprobadosTotal {
-		color: black;
-		width: 200px;
-		margin-left: auto;
-		margin-right: auto;
-		text-align: center;
-	}
-	#preguntasMostradas{
-		margin: 0;
-	}
-	.preguntas {
-		border: 1px solid black;
-		margin-bottom: 0.2em;
-		padding: 0.1em;
-		background-image: url('src/fondoPregunta.jpg');
-		background-repeat: repeat;
-	}
-	.respuesta, .pregunta{
-		width: 80%;
-		margin-left: 10px;
-		inline:block;
-		height: 30%;
-	}
-	.respuesta {
-		line-height: 2.4em;
-	}
-	.acierto {
-		background-color: #4cb77c;
-	}
-	#estadistica {
-		font-weight: bold;
-		font-size: 120%;
-		color: white;
-		margin-bottom: 1em;
-		text-shadow:1px 1px black;
-		clear: both;
-	}
-
-	.error {
-		background-color: red;
-	}
-	.pregunta{
-		font-size: 110%;
-	}
-	.numPregunta{
-		font-weight: bolder;
-		font-size: 150%;
-		border-style: 5px solid;
-		color:darkred;
-	}
-	img{
-		min-height: 100px;
-		min-width: 100px;
-		vertical-align: middle;
-		margin-right: 1em
-		height:150%;
-		margin: 1em;
-		border: 1px solid black;
-	}
-	input{
-		margin: 10px;
-	}
-	#botonAnterior, #botonSiguiente, #botonCorregir, #botonNuevoTest {
-		top:0%;
-		font-size: 200%;
-	}
-	#botonSiguiente, #botonCorregir, #botonNuevoTest {
-		float: right;
-	}
-
-	footer{
-		padding: 0.5em;
-		margin: 0 auto;
-		width: 90%;
-	}
-
-	</style>
+	<LINK href="estilos.css" rel="stylesheet" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 	<script src="script.js" type="text/javascript"></script>
 </head>
